# MLOps

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
diagrams/: package.dio  sequence.dio  uml.dio
main/: CMakeLists.txt  main.c
main/components/dht/: dht_sensor.c  dht_sensor.h
main/components/mq4/: mq4_sensor.c  mq4_sensor.h
main/components/mq7/: mq7_sensor.c  mq7_sensor.h
main/core/network/time_sync/: time_sync.c  time_sync.h
main/core/network/webserver/: webserver.c  webserver.h
main/core/network/wifi_connector/: wifi_connector.c  wifi_connector.h
main/core/sensors/dht/: dht_sensor.c  dht_sensor.h
main/core/sensors/mq4/: mq4_sensor.c  mq4_sensor.h
main/core/sensors/mq7/: mq7_sensor.c  mq7_sensor.h
main/core/shared/: shared_sensor_data.c  shared_sensor_data.h
main/core/storage/csv_logger/: csv_logger.c  csv_logger.h
main/core/storage/csv_merger/: csv_merger.c  csv_merger.h
main/core/storage/csv_writer/: csv_writer.c  csv_writer.h
main/core/storage/spiffs_manager/: spiffs_manager.c  spiffs_manager.h
main/helpers/supervisor/: supervisor.c  supervisor.h
main/ml/: clustered_data.csv  elbow_method.py  generate_single_file.py  kmeans_application.py  merged.csv  remove_file.py
main/ml/algorithms/dbscan_application/: main.py
main/ml/algorithms/gmm_application/: main.py
main/ml/algorithms/kmeans_application/: kmeans_trainer.py  kmeans_w_elbow.py  kmeans_w_siluette.py  predict_from_input.py  predition.py
main/ml/algorithms/kmeans_application/models/: centroids.npy  data_stats.csv  kmeans_model.pkl  scaler.pkl
main/ml/algorithms/knn_application/: main.py
main/ml/comparison/cetesb/: cetesb_co.py  cetesb_co_historical.py  cetesb_temp.py  linear_correction_historical.py
main/ml/data/processed/: cetesb_co_congonhas_formatado.csv  cetesb_sao_jose_rio_preto_formatado.csv  clustered_data_dbscan.csv  clustered_data_gmm.csv  clustered_data_kmeans.csv  clustered_data_kmeans_trained.csv  clustering_metrics.csv  comparacao_corrigida.csv  sensor_data_cleaned.csv  sensor_data_with_clusters.csv  sensor_readings_calibrado.csv  sensor_readings_corrigido.csv  sensor_readings_formatado.csv
main/ml/data/raw/: merged.csv
main/ml/dbscan/: main.py
main/ml/gmm/: main.py
main/ml/kmeans_application/: main.py
main/ml/knn/: main.py
main/ml/knn/graphs/: knn_classification_report.txt
main/ml/utils/: elbow_method.py  historical_avg_sensor.py  sensor_data_clear.py
main/ml/utils/cetesb/: format_co.py  format_temp.py
(+4 files in other folders)
